@@ -1,6 +1,12 @@
 2017-10-17  Adhemerval Zanella  <adhemerval.zanella@linaro.org>
 
 	* sysdeps/sparc/sparc64/multiarch/Makefile (sysdep_routines):
+	Add add_n-generic.
+	* sysdeps/sparc/sparc64/multiarch/add_n-generic.S: New file.
+	* sysdeps/sparc/sparc64/multiarch/add_n.c: Likewise.
+	* sysdeps/sparc/sparc64/multiarch/add_n.S: Remove file.
+
+	* sysdeps/sparc/sparc64/multiarch/Makefile (sysdep_routines):
 	Add submul_1-generic.
 	* sysdeps/sparc/sparc64/multiarch/submul_1-generic.S: New file.
 	* sysdeps/sparc/sparc64/multiarch/submul_1.c: Likewise.
